[gd_scene load_steps=8 format=3 uid="uid://bexjopfowqek2"]

[ext_resource type="Script" path="res://Scripts/StartScreen.gd" id="1_jo1o7"]
[ext_resource type="Texture2D" uid="uid://hbi3jr4ufguw" path="res://Graphics/MenuThumbnail.png" id="2_fd6o7"]
[ext_resource type="FontFile" uid="uid://dtreqxrld72uy" path="res://Graphics/High Speed.ttf" id="3_04wai"]
[ext_resource type="Texture2D" uid="uid://chqvn1ywdxgvj" path="res://Unknowngtx.png" id="4_uj7wk"]
[ext_resource type="PackedScene" uid="uid://csm1kajj2v5k2" path="res://Scenes/Settings.tscn" id="5_31ua7"]
[ext_resource type="PackedScene" uid="uid://d2ldcv2c4xsh7" path="res://Scenes/UpgradeMenu.tscn" id="5_sc8jh"]
[ext_resource type="Script" path="res://Scripts/player_stats.gd" id="6_j66xh"]

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_jo1o7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(583, 328)
scale = Vector2(1.13971, 1.14063)
texture = ExtResource("2_fd6o7")

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D"]
offset_left = -488.0
offset_top = -276.0
offset_right = -256.0
offset_bottom = -63.0
theme_override_constants/separation = 20

[node name="start" type="Button" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_04wai")
text = "Start"

[node name="upgrade" type="Button" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_04wai")
text = "Upgrade"

[node name="settings" type="Button" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_04wai")
text = "Settings"

[node name="exit" type="Button" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_04wai")
text = "exit
"

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1170, 590)
texture = ExtResource("4_uj7wk")

[node name="Settings" parent="." instance=ExtResource("5_31ua7")]
visible = false

[node name="UpgradeMenu" parent="." instance=ExtResource("5_sc8jh")]
visible = false

[node name="Playerstats" type="Node" parent="."]
script = ExtResource("6_j66xh")

[connection signal="pressed" from="Sprite2D/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Sprite2D/VBoxContainer/upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Sprite2D/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Sprite2D/VBoxContainer/exit" to="." method="_on_exit_pressed"]
